Added office hours.

--- a/lec/notes/2018-06-13.tex
+++ b/lec/notes/2018-06-13.tex
@@ -16,7 +16,7 @@ different temperatures measured in degrees Farenheit.  A plot
 higher the temperature, the faster the crickets chirp.  We can
 quantify this by attempting to fit a linear model
 \[
-  \mbox{temperature} = \alpha \cdot \mbox{chirps} + \mbox{beta} + \epsilon
+  \mbox{temperature} = \alpha \cdot \mbox{chirps} + \beta + \epsilon
 \]
 where $\epsilon$ is an error term.  To solve this problem by standard linear
 regression, we minimize the least squares norm residual
